# repro

./: .bazelrc  .gitignore  BUILD.bazel  test.cc  test.sh
